<resources>
    <string name="app_name">Share Plate</string>
    <string name="app_welcome_name">Welcome to Share Plate!</string>
    <string name="app_description">Donate the food to those in need</string>
    <string name="login_header">Login Header</string>
    <string name="share_food_btn">Share Food</string>
    <string name="need_food_btn">Need Food</string>
    <string name="login_dialog_header">Login with Email and Password</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_txt">Login</string>
    <string name="trail">Listed by <b>Venkatesh Talacheeru</b></string>
    <string name="add_food">Add Food List</string>
    <string name="no_listing_found">No Listing Found</string>
    <string name="request_order">Request Order</string>
    <string name="delete_listing">Delete Listing</string>
    <string name="logout">logout</string>
    <string name="add_food_listing">Add Food Listing</string>
    <string name="reason_for_listing">Reason for Listing</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="location_hint">Where to Reach?</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="list_food_items">List Food Items</string>
    <string name="orders">Orders</string>
    <string name="accept_order">Accept Order</string>
    <string name="request_date">Request Date:</string>
    <string name="ordered_by">Ordered By:</string>
    <string name="order_id">Order ID:</string>
</resources>