<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageButton
            android:id="@+id/closeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_close_clear_cancel"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_dialog_header"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:background="@drawable/input_background"
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_margin="15dp"
            android:background="@drawable/input_background"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/btn_txt_color"
            android:textStyle="bold"
            android:background="@drawable/button_receive"
            android:text="@string/login_txt"
            android:layout_margin="20dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>