<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShareActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A0FFC9"
        android:overScrollMode="never"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_food_btn"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/btn_show_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_checkout"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@id/btn_logout_share"/>

            <ImageButton
                android:id="@+id/btn_logout_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_logout"
                android:contentDescription="@string/logout" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/foodList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/addShareFood"
        android:layout_below="@id/toolBar1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        tools:listitem="@layout/item_food_share" />

    <TextView
        android:id="@+id/no_list_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_listing_found"
        android:visibility="gone"
        android:textAlignment="center"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/addShareFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:textColor="@color/btn_txt_color"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableTint="@color/white"
        android:drawableStart="@android:drawable/ic_input_add"
        android:background="@drawable/button_share"
        android:text="@string/add_food"/>

</RelativeLayout>